# handy_shortcuts

./: Cargo.toml
notes/: README.md
src/: finder.rs  lib.rs  os.rs
